Changelog
=========

0.4.1 (unreleased)
------------------

* Don't try to send notification if PloneboardNotify isn't installed in the Plone site (close #2) [keul]
* Forum outside the Forum Area were not supported by the configuration UI [keul]

0.4.0 (2010-03-13)
------------------

* Added french translation (thanks to Nicolas Laurance) [keul]
* Egg format cleaned up [keul]
* Ploneboard is now a dependency [keul]
* Merged Nicolas changes to send HTML email [keul]
* Fixed internal link in emails sent in the HTML part [keul]
* Added to messages the user info [keul]
* Added functional tests [keul]
* Message Boards and forums inside were not correctly shown in settings [keul]
* Getting e-mail from site users was not working on Plone 2.5 [keul]

0.3.0 (2009-08-14)
------------------

* Added local configuration for the Forum content [keul]
* The forum title added in the mail was not the real forum title [keul]
* Added some other infos to the sent mail [keul]
* Mail using BCC now supported [keul]
* Added i18n support and italian complete translation [keul]
* Fixed critical problem with email encodings [keul]
* Added a local setting for changing text encoding in email sent [keul]
* A lot of UI enhancement [keul]

0.2.0 (2009-06-17)
------------------

* Added the debug mode to print mail contents but not send anything [keul]

0.1.0 - Unreleased
------------------

* Initial release
