@@ -2,7 +2,7 @@ import unittest
 import doctest
 
 from zope.testing import doctestunit
-from zope.component import testing, provideAdapter
+from zope.component import testing
 
 from Testing import ZopeTestCase as ztc
 
